# quasioptimal.io

./: .gitignore  DEPLOY.md  Makefile  app.py  bibliography.html  commonplace.html  config.toml  index.html  style.css
content/: _index.md  bibliography.md  commonplace.md
content/posts/: _index.md  scaling-the-good.md
content/reviews/: _index.md
data/: bibliography.json  commonplace.json
js/: bibliography.js  commonplace.js
mocks/vault/: README.md
mocks/vault/.obsidian/: should-be-skipped.md  workspace.json
mocks/vault/quotes/: descartes-tricky-yaml.md  saint-exupery-perfection.md  wittgenstein-silence.md
mocks/vault/sources/: categories-mac-lane.md  kuhn-structure.md  private-only.md  seeing-like-a-state.md  shannon-1948.md
posts/: just-the-good-bits.html  scaling-the-good.html  topology.html
scaling-the-good/: index.html
scripts/: refresh  serve
static/: style.css
static/js/: bibliography.js  commonplace.js  spa.js
templates/: 404.html  base.html  bibliography.html  commonplace.html  index.html  macros.html  post.html  review.html  section.html
tools/zk2data/: Cargo.toml  README.md
tools/zk2data/src/: frontmatter.rs  main.rs  model.rs  render.rs
tools/zk2data/tests/: leak_guard.rs
